# Super-TKMK

./: .gitignore  CMakeLists.txt  README.md  energy_history.h5  environment.yml
docs/: ACCURACY_NOTES.md  ARCHITECTURE.md  VERIFICATION.md
src/advection_ct/: README.md
src/core/: hybrid_controller.py  state_buffer.py
src/mhd_solver/: CMakeLists.txt  README.md  cuda_mhd_ct.cu  cuda_mhd_ct.cuh  initial_conditions.cu
src/mhd_solver/tests/: test_mhd_ct.cu
src/pin_operator/: README.md
src/visualization/: README.md
validation/benchmarks/: README.md  orszag_tang.py  toroidal_mhd_test.py
validation/tests/: hybrid_system_test.py
validation/verification/: divergence_test.py  energy_conservation.py  test_divergence.py
